2008-02-26  Werner Koch  <wk@g10code.com>

	* common.c (qp_decode): Add arg S_LBRK.
	* mimeparser.c (plaintext_handler, ciphertext_handler): Handle
	soft line breaks.

	* mapihelp.cpp (mapi_change_message_class): Handle opaque S/MIME
	messages without an smime-type parameter.

2008-02-25  Werner Koch  <wk@g10code.com>

	* message.cpp (message_verify): Show message boxes for non-signed
	messages.
	(message_decrypt): Likewise.

2008-02-19  Marcus Brinkmann  <marcus@g10code.de>

	* engine-assuan.c (get_uiserver_name): Change default uiserver
	path and remove work-around.

2008-02-18  Werner Koch  <wk@g10code.com>

	* message.cpp (pgp_body_to_attachment): New.
	(message_decrypt): Use it.
	(message_wipe_body_cruft): Also wipe already processed PGP
	encrypted messages.  Factor common code out to ...
	(do_wipe_body): .. new.
	* mapihelp.h (ATTACHTYPE_PGPBODY): New.

2008-02-15  Werner Koch  <wk@g10code.com>

	* olflange-dlgs.cpp: Remove code for IDC_ENCRYPT_WITH_STANDARD_KEY
	and IDC_ENCRYPT_TO.
	* dialogs.rc: Ditto.

2008-02-13  Werner Koch  <wk@g10code.com>

	* mapihelp.cpp (get_gpgolcharset_tag, mapi_get_gpgol_charset) 
	(mapi_set_gpgol_charset): New. 
	(mapi_get_gpgol_body_attachment): Transcode from Latin-1.
	* mimeparser.c (start_attachment): Set the charset property.
	(struct mime_context): Remove is_utf8 field.

2008-02-11  Werner Koch  <wk@g10code.com>

	* common.h (tlvinfo_t): New.
	* common.c (parse_tlv): New.  Based on code from libksba.
	* mapihelp.cpp (has_smime_filename): New.
	(is_really_cms_encrypted): New.
	(mapi_change_message_class): Use this here to work around a
	CryptoEx bug.

2008-02-08  Werner Koch  <wk@g10code.com>

	* mapihelp.cpp (mapi_change_message_class): Improve detecion of
	CryptoEx messages.

2008-02-07  Werner Koch  <wk@g10code.com>

	* engine.c (engine_verify_start): Enable opaque signature for the
	assuan backend.
	* engine-assuan.c (op_assuan_verify): New arg OUTDATA.  Add
	support for opaque signatures.
